--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
 	box-sizing: border-box;
 }
 
+html {
+    font-family: 'open-sans', sans-serif;
+}
+
 /* Header Section Styling */
 
 .header {
@@ -16,10 +20,10 @@
     padding: 20px 0;
 }
 
-section {
+/* .section-spacing {
     max-width: 1200px;
     margin: 0 auto;
-}
+} */
 
 nav-wrapper {
     display: flex;
@@ -29,7 +33,7 @@ nav-wrapper {
 ul {
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 20px;
 }
 
 ul li {
@@ -38,7 +42,7 @@ ul li {
 
 ul li a:link {
     text-decoration: none;
-    color: #31343B;
+    color: #57585b;
 }
 
 ul li a:hover {
@@ -57,8 +61,17 @@ ul li a:hover {
 /* Hero Section Styling */
 
 .section-hero {
+    width: 100vw;
+    background: #fbfbfb;
+    position: relative;
+    overflow: hidden;
+}
+
+.section-hero-container {
     height: auto;
-    width: 100%;
+/*     width: 100%; */
+    max-width: 1200px;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     padding: 50px 0;
@@ -70,26 +83,35 @@ ul li a:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
+    padding: 0 30px;
 }
 
 .hero-image-wrapper {
 /*     height 100%; */
     width: 50%;
+    height: auto;
+    margin: auto 0;
 
 }
 
-.hero-heading {
-    font-size: 28px;
-}
-
-h1 > span {
-    display: block;
+.hero-image {
+    height: 426px;
 }
 
 h1 {
     color: #754EF9;
     text-transform: uppercase;
 }
+
+/* h1 > span {
+    display: block;
+} */
+
+.hero-heading {
+    font-size: 28px;
+}
+
 
 .heading-style {
     display: block;
@@ -98,36 +120,104 @@ h1 {
 }
 
 .hero-description {
-    font-size: 18px;
+    font-size: 14px;
+    color: #5c5c5c;
 }
 
 .btn {
-    font-size: 16px;
+    font-size: 14px;
     background-color: #754EF9;
     display: block;
-    padding: 5px 10px;
+    padding: 10px 25px;
     color: #fff;
     border-radius: 50px;
-    width: 150px;
+    width: auto;
     text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 
 }
 
 a:link {
     text-decoration: none;
-
 }
 
-.hero-image {
-    height: 70%;
-}
 
 .margin-top-s {
-    margin-top: 16px;
+    margin-top: 20px;
 }
 
 .margin-top-m {
-    margin-top: 24px;
+    margin-top: 40px;
+}
+
+/* Shape Decorations in the Header */
+
+.shape1 {
+    position: absolute;
+    left: -20px;
+    top: -20px;
+    width: 60px;
+}
+
+.shape1b {
+    position: absolute;
+    right: 150px;
+    top: 250px;
+    width: 60px;
+}
+
+.shape2 {
+    position: absolute;
+    left: 300px;
+    top: -40px;
+    width: 60px;
+}
+
+.shape2b {
+    position: absolute;
+    right: 240px;
+    top: 0px;
+    width: 60px;
+}
+
+.shape3 {
+    position: absolute;
+    left: 40%;
+    top: -10px;
+    width: 110px;
+}
+
+.shape3b {
+    position: absolute;
+    right: 10%;
+    bottom: 10px;
+    width: 110px;
+}
+
+.shape3c {
+    position: absolute;
+    left: 2%;
+    bottom: 20%;
+    width: 110px;
+}
+
+.shape4 {
+    position: absolute;
+}
+
+.shape5 {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 150px;
+}
+
+.shape6 {
+    position: absolute;
+    bottom: 0;
+    left: 48%;
+    width: 90px;
 }
 
 /* About Section Styling */
