--- a/style.css
+++ b/style.css
@@ -3,150 +3,74 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-
-/* Header Section Styling */
-
-.header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px 0;
-}
-
-section {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-nav-wrapper {
-    display: flex;
-    flex-direction: row;
-}
-
-ul {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-}
-
-ul li {
-    list-style: none;
-}
-
-ul li a:link {
-    text-decoration: none;
-    color: #31343B;
-}
-
-ul li a:hover {
-    color: #754EF9;
-}
-
-/* .line-decoration::before {
-    content: "x";
-    height: 2px;
-    width: 10px;
-    background: #754EF9;
-    color: #754EF9;
-} */
-
-
-/* Hero Section Styling */
-
-.section-hero {
-    height: auto;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    padding: 50px 0;
-}
-
-.hero-details {
-/*     height: 100%; */
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.hero-image-wrapper {
-/*     height 100%; */
-    width: 50%;
-
-}
-
-.hero-heading {
-    font-size: 28px;
-}
-
-h1 > span {
-    display: block;
-}
-
-h1 {
-    color: #754EF9;
-    text-transform: uppercase;
-}
-
-.heading-style {
-    display: block;
-    font-size: 42px;
-    color: #040404;
-}
-
-.hero-description {
-    font-size: 18px;
-}
-
-.btn {
-    font-size: 16px;
-    background-color: #754EF9;
-    display: block;
-    padding: 5px 10px;
-    color: #fff;
-    border-radius: 50px;
-    width: 150px;
-    text-align: center;
-
-}
-
-a:link {
-    text-decoration: none;
-
-}
-
-.hero-image {
-    height: 70%;
-}
-
-.margin-top-s {
-    margin-top: 16px;
-}
-
-.margin-top-m {
-    margin-top: 24px;
-}
-
-/* About Section Styling */
-
-.AboutMe{
+.about-intro{
 	font-family: 'Open Sans', sans-serif;
-	font: weight 400px;
+	font-weight: 400px;
 	text-align: center;
 }
 p{
 	font-family: 'Open Sans', sans-serif;
-	text-align: center;
+	font-size: 13px;
+	
 }
-.intro{
+h4{
+
+}
+.container-mark-intro{
+	display: flex;
+	height: auto;
+	width: 100%;
 	font-family: 'Open Sans', sans-serif;
-	text-align: center;
+	padding-left: 20px;
+	margin: 0 auto;
 }
+.grid-container{
+	
+	display: grid;
+	grid-gap: 10px;
+	height: 600px;
+	width: 600px;
+	grid-template-columns: repeat(3, 3fr);
+	grid-template-rows: repeat(2, 3fr);
+	background-color: lightgray;
+	border: 4px solid rgba(248, 243, 243);
+	padding: 10px;
+	margin: 0 auto;
+	/* margin-right: auto;
+	margin-left: auto; */
+}
+.grid-item{
+	background-color: blue;
+	border: 1px solid rgba(230, 9, 9, 0);
+    padding: 20px 20px;
+ 	font-size: 30px;
+    align-items: center;
+	height: 100vh;
+	width: 100vw;
+	
+}
+.container-about-intro{
+text-align: center;
 
-
+}
+.about-paragraph{
+	max-width:450px;
+	/* font-size:10px; */
+	margin:0 auto;
+	
+}
+.progress-bar{
+	align-items: right;
+}
+.mark-intro{
+	max-width: 605px;
+	text-align: left;
+	padding: 30px;;
+	
+}
+.span-dob{
+	font-weight: bold;
+}
 
 
 
