--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 p{
 	font-family: 'Open Sans', sans-serif;
 	font-size: 13px;
+	color:rgb(96, 96, 96)
 	
 }
 h4{
@@ -18,37 +19,17 @@ h4{
 }
 .container-mark-intro{
 	display: flex;
+	flex-direction: row;
 	height: auto;
 	width: 100%;
 	font-family: 'Open Sans', sans-serif;
-	padding-left: 20px;
-	margin: 0 auto;
+
 }
-.grid-container{
-	
-	display: grid;
-	grid-gap: 10px;
-	height: 600px;
-	width: 600px;
-	grid-template-columns: repeat(3, 3fr);
-	grid-template-rows: repeat(2, 3fr);
-	background-color: lightgray;
-	border: 4px solid rgba(248, 243, 243);
-	padding: 10px;
-	margin: 0 auto;
-	/* margin-right: auto;
-	margin-left: auto; */
+.intro-left-heading{
+	font-weight: bold;
+	margin-bottom: 16px;
 }
-.grid-item{
-	background-color: blue;
-	border: 1px solid rgba(230, 9, 9, 0);
-    padding: 20px 20px;
- 	font-size: 30px;
-    align-items: center;
-	height: 100vh;
-	width: 100vw;
-	
-}
+
 .container-about-intro{
 text-align: center;
 
@@ -61,16 +42,72 @@ text-align: center;
 }
 .progress-bar{
 	align-items: right;
+	width:50%;
+	padding:30px;
+}
+.intro-left{
+	width:50%;
+	padding: 30px;
 }
 .mark-intro{
-	max-width: 605px;
+	/* max-width: 605px; */
 	text-align: left;
-	padding: 30px;;
+	/* padding: 30px; */
 	
+}
+
+.details{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	width: 100%;
+	margin-top: 16px;
+	align-items: center;
+}
+.details i{
+	color: rgba(117, 78, 249,0.4);
+	opacity: ;
+	
+}
+.details-elements{
+	width: 50%;
+	margin-top: 5px;
+	display: flex;
+}
+.dob{
+	display:flex;
+	padding-bottom: 10px;
+	padding-left: 10px;
 }
 .span-dob{
 	font-weight: bold;
 }
+.email{
+	display: flex;
+}
+.span-email{
+	font-weight: bold;
+}
+.phone{
+	display:flex;
+	padding-bottom: 10px;
+	padding-left: 10px;
 
+}
+.span-phone{
+	font-weight: bold;
+}
+.location{
+	display:flex;
+}
+.span-location{
+	font-weight: bold;
+}
+.section-services{
 
+}
+.my-services-heading{
+	font-weight: bold;
+	text-align: center;
+}
 
