--- a/style.css
+++ b/style.css
@@ -18,21 +18,18 @@ html {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px 0;
+}
+
 .about-intro{
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400px;
 	text-align: center;
 }
 
-/* .section-spacing {
-    max-width: 1200px;
-    margin: 0 auto;
-} */
 p{
 	font-family: 'Open Sans', sans-serif;
 	font-size: 13px;
-	color:rgb(96, 96, 96)
-	
+	color:rgb(96, 96, 96)	
 }
 
 .container-mark-intro{
@@ -40,13 +37,15 @@ p{
 	flex-direction: row;
 	height: auto;
 	width: 100%;
-	font-family: 'Open Sans', sans-serif;
+	/* font-family: 'Open Sans', sans-serif; */
+}
 
 ul {
     display: flex;
     flex-direction: row;
     gap: 20px;
 }
+
 .intro-left-heading{
 	font-weight: bold;
 	margin-bottom: 16px;
@@ -56,18 +55,10 @@ ul li a:link {
     text-decoration: none;
     color: #57585b;
 }
+
 .container-about-intro{
 text-align: center;
-
 }
-
-/* .line-decoration::before {
-    content: "x";
-    height: 2px;
-    width: 10px;
-    background: #754EF9;
-    color: #754EF9;
-} */
 
 
 /* Hero Section Styling */
@@ -87,11 +78,12 @@ text-align: center;
     display: flex;
     flex-direction: row;
     padding: 50px 0;
+}
+
 .about-paragraph{
-	max-width:450px;
+	max-width:600px;
 	/* font-size:10px; */
 	margin:0 auto;
-	
 }
 
 .hero-details {
@@ -102,6 +94,8 @@ text-align: center;
     justify-content: center;
     align-items: flex-start;
     padding: 0 30px;
+}
+
 .progress-bar{
 	align-items: right;
 	width:50%;
@@ -113,6 +107,7 @@ text-align: center;
     width: 50%;
     height: auto;
     margin: auto 0;
+}
 
 .intro-left{
 	width:50%;
@@ -121,11 +116,12 @@ text-align: center;
 
 .hero-image {
     height: 426px;
+}
+
 .mark-intro{
 	/* max-width: 605px; */
 	text-align: left;
 	/* padding: 30px; */
-	
 }
 
 .details{
@@ -136,10 +132,9 @@ text-align: center;
 	margin-top: 16px;
 	align-items: center;
 }
+
 .details i{
 	color: rgba(117, 78, 249,0.4);
-	opacity: ;
-	
 }
 
 /* h1 > span {
@@ -155,6 +150,8 @@ text-align: center;
     display: block;
     font-size: 42px;
     color: #040404;
+}
+
 .details-elements{
 	width: 50%;
 	margin-top: 5px;
@@ -164,6 +161,8 @@ text-align: center;
 .hero-description {
     font-size: 14px;
     color: #5c5c5c;
+}
+
 .dob{
 	display:flex;
 	padding-bottom: 10px;
@@ -181,6 +180,7 @@ text-align: center;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 1px;
+}
 
 .span-dob{
 	font-weight: bold;
@@ -188,6 +188,8 @@ text-align: center;
 
 a:link {
     text-decoration: none;
+}
+
 .email{
 	display: flex;
 }
@@ -195,10 +197,12 @@ a:link {
 .span-email{
 	font-weight: bold;
 }
+
 .phone{
 	display:flex;
 	padding-bottom: 10px;
 	padding-left: 10px;
+}
 
 .margin-top-s {
     margin-top: 20px;
@@ -291,20 +295,38 @@ a:link {
     left: 20%;
     bottom: 8%;
     background: #754EF9;
+}
+
 .span-phone{
 	font-weight: bold;
 }
+
 .location{
 	display:flex;
 }
+
 .span-location{
 	font-weight: bold;
 }
-.section-services{
 
-}
+/* .section-services{
+
+} */
+
 .my-services-heading{
 	font-weight: bold;
 	text-align: center;
 }
 
+
+/* Section CTA Styling */
+
+/* Section Recent Works Syling */
+
+/* Section Pricing Syling */
+
+/* Section Blog Syling*/
+
+/* Section Contact Syling */
+
+/* Footer Syling */
